Fixed white overlap in landing page

--- a/src/Assets/css/default.css
+++ b/src/Assets/css/default.css
@@ -37,6 +37,7 @@ html,#landingPage, #pt{
     position: relative;
     margin-bottom: 0;
     text-align: center;
+    background-color: #212529;
 }
 #landingText{
     color: white;
